# stretch4_install

./: LICENSE.md  README.md  SUMMARY.md  stretch_copy_calibration.sh  stretch_new_robot_install.sh  stretch_new_user_install.sh  stretch_update_ros_workspace.sh  stretch_update_user.sh
.github/docker/: Dockerfile  README.md  build.sh  test.sh
.github/workflows/: test_with_docker.yaml
docs/: add_new_user.md  configure_BIOS.md  contributing.md  install_ubuntu_24.04.md  robot_install.md  ros_workspace.md
factory/: setup_git.sh
factory/24.04/: background_services_installer.sh  hello_robot_audio_disable_suspension.py  hello_sudoers  stretch-ros2-zenoh-router.service  stretch_cleanup_robot.sh  stretch_create_ament_workspace.sh  stretch_fleet_configure.sh  stretch_initial_setup.sh  stretch_install_dev_tools.sh  stretch_install_system.sh  stretch_ros2_jazzy.repos  stretch_system_update.sh
stretch_venv/: .gitignore  README.md  pyproject.toml  setup_venv.sh  update_bashrc.sh
